# distributed-file-sharing-system

./: CMakeLists.txt  LICENSE  README.md  download  myserver  test.sh
file-sharing-system/: CMakeLists.txt
file-sharing-system/src/: DownloadHandler.cpp  DownloadHandler.h  RequestHandler.cpp  RequestHandler.h  RequestHandlerFactory.cpp  RequestHandlerFactory.h  ShareHandler.cpp  ShareHandler.h  SharedWithHandler.cpp  SharedWithHandler.h  UploadHandler.cpp  UploadHandler.h  UserManager.cpp  UserManager.h  main.cpp
test_uploads/: report.docx
uploads/: testfile.txt
